--- a/templates/cci.html
+++ b/templates/cci.html
@@ -16,7 +16,7 @@ Centre for Computational Intelligence
       <div class="list-order">
         <h5 class="text-center"></h5>
         <p class="lead text-center" style="text-align: center;">&nbsp;<img
-            src="../static/assets/img/why-us.png"
+            src="../static/assets/img/reseach6.jpg"
             alt="" width="120" height="160" /> &nbsp;</p>
         <p class="lead text-center" style="text-align: center;">Led by Dr Goh Ching Pang &nbsp; &nbsp;</p>
         <!-- Feature -->
@@ -58,7 +58,7 @@ Centre for Computational Intelligence
                   style="object-fit: cover; width: 300px; height: auto;"/> </a>
               <h5 class="text-center"><a href="#">Artificial Intelligence (AI) Group</a><p></p></h5>
               <p align="justify">Led by Dr Lim Khai Yin&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
-                  src="../static/assets/img/why-us.png"
+                  src="../static/assets/img/reseach7.jpg"
                   width="60" height="80" caption="false"
                   style="float: center; margin-left: auto; margin-right: auto;" /></p>
               <p align="justify">AI is a general term that implies the use of computer to model and / or replicate
@@ -73,7 +73,7 @@ Centre for Computational Intelligence
                   style="object-fit: cover; width: 300px; height: auto;"/> </a>
               <h5 class="text-center"><a href="#">Computer Vision (CV) Group</a><p></p></h5>
               <p align="justify">Led by AP Ts Dr Tew Yiqi&nbsp;&nbsp;&nbsp;&nbsp;<img
-                  src="../static/assets/img/why-us.png"
+                  src="../static/assets/img/reseach8.jpg"
                   alt="" width="60" height="80" caption="false" /></p>
               <p align="justify">CV processing works on the computer-based interpretation of 2D and 3D image data set
                 from conventional and nonconventional image sources. It involves the field of Medical Image Analysis,
@@ -85,7 +85,7 @@ Centre for Computational Intelligence
                   style="object-fit: cover; width: 300px; height: auto;"/> </a>
               <h5 class="text-center"><a href="#">Robotic<br />Group</a></h5>
               <p align="justify">Led by Mr Wong Hon Yoon&nbsp;&nbsp;&nbsp;&nbsp;<img
-                  src="../static/assets/img/why-us.png"
+                  src="../static/assets/img/reseach9.jpg"
                   width="60" height="80" caption="false"
                   style="float: center; margin-left: auto; margin-right: auto;" /></p>
               <p align="justify">Robotic research is involved in research pertaining to all aspects of robotic
@@ -99,7 +99,7 @@ Centre for Computational Intelligence
                   style="object-fit: cover; width: 300px; height: auto;"/> </a>
               <h5 class="text-center"><a href="#">Human Computer Interaction (HCI) Group</a></h5>
               <p align="justify">Led by Dr Aw Kien Sin&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
-                  src="../static/assets/img/why-us.png"
+                  src="../static/assets/img/reseach10.jpg"
                   width="60" height="80" caption="false"
                   style="float: center; margin-left: auto; margin-right: auto;" /></p>
               <p align="justify">HCI group aims to bridge gap between the human and digital world. Thus, we explore the
