--- a/templates/ccncs.html
+++ b/templates/ccncs.html
@@ -17,7 +17,7 @@ Centre for Computer Networking and Cyber Security
         <p><!-- Feature --></p>
         <p></p>
         <p><!-- <div class="jumbotron feature">--></p>
-        <p><img src="../static/assets/img/why-us.png" width="150" height="225"
+        <p><img src="../static/assets/img/reseach11.jpg" width="150" height="225"
             caption="false" style="display: block; margin-left: auto; margin-right: auto;" /></p>
        
         <p><!-- Heading --></p>
@@ -71,7 +71,7 @@ Centre for Computer Networking and Cyber Security
                   style="width: 500px; height: 300px; object-fit: cover;" /> </a>
               <h5 class="text-center"><a href="#"><span>Computer Networking Group</span></a></h5>
               <p align="justify">Led by Ts Chok Len Mooi</p>
-              <p align="justify"><img src="../static/assets/img/why-us.png"
+              <p align="justify"><img src="../static/assets/img/reseach12.jpg"
                   alt="" width="100" height="131" /></p>
               <p align="justify"><span>This research group aims to create a platform for students and lecturers to do
                   research and consultancy work in the area of computer networking, create interest and provide relevant
@@ -82,7 +82,7 @@ Centre for Computer Networking and Cyber Security
                   style="width: 500px; height: 300px; object-fit: cover;"  /> </a>
               <h5 class="text-center"><a href="#"><span>Cyber Security Group</span></a></h5>
               <p align="justify">Led by Ts Lim Shen Huoy</p>
-              <p align="justify"><img src="../static/assets/img/why-us.png"
+              <p align="justify"><img src="../static/assets/img/reseach13.jpg"
                   alt="" width="100" height="129" /></p>
               <p align="justify"><span>This research group aims to create a platform for students and lecturers to do
                   research and consultancy work in the area of cyber security, create interest and provide relevant
