--- a/templates/cicrnd.html
+++ b/templates/cicrnd.html
@@ -13,7 +13,7 @@ Centre for Integrated Circuit Research and Development
     <div class="cell-md-12">
       <div class="list-order">
         <h4 style="text-align: center;"><img
-            src="../static/assets/img/why-us.png" alt="" width="125"
+            src="../static/assets/img/reseach14.jpg" alt="" width="125"
             height="163" /></h4>
         <p style="text-align: center;">Led by Dr. Poh Tze Ven</p>
         <h4 style="text-align: center;"><strong>What is an integrated circuit (IC)?</strong></h4>
