--- a/templates/ciot.html
+++ b/templates/ciot.html
@@ -15,7 +15,7 @@ Centre for Internet of Things
         <h3 class="shell text-center" style="text-align: center;"></h3>
         <p style="text-align: center;">Led by</p>
         <p style="text-align: center;"><img
-            src="../static/assets/img/why-us.png"
+            src="../static/assets/img/reseach8.jpg"
             alt="" width="120" height="160" /></p>
         <div style="text-align: center;">Assoc. Prof. Ts. Dr. Tew Yiqi</div>
         <div style="text-align: center;"></div>
