--- a/templates/programme2.html
+++ b/templates/programme2.html
@@ -6,12 +6,13 @@
     margin: 0%;
     padding: 0%;
   }
+
   p {
     text-align: justify;
-  text-justify: inter-word;
+    text-justify: inter-word;
   }
 
-  .btn{
+  .btn {
     background-color: #eba200;
     border-radius: 0%;
 
@@ -56,10 +57,10 @@
             <strong>Mininum Entry Requirement</strong>
           </a></li>
         <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#outline">
-          <strong>Programme Outline</strong>
+            <strong>Programme Outline</strong>
           </a></li>
         <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#career">
-          <strong>Career Prospect</strong>
+            <strong>Career Prospect</strong>
           </a></li>
       </ul>
     </div>
@@ -95,31 +96,31 @@
       <div id="outline" class="tab-pane fade">
         <h4>Programme Outline:</h4>
         <ul>
-        {%set outlines = prog.progOutline.split("#")%}
-        {%for outline in outlines%}
-        <li>{{outline}}</li>
-        {% endfor %}
-      </ul>
+          {%set outlines = prog.progOutline.split("#")%}
+          {%for outline in outlines%}
+          <li>{{outline}}</li>
+          {% endfor %}
+        </ul>
       </div>
       <div id="career" class="tab-pane fade">
         <h4>Career Prospects</h4>
         <ul>
-        {%set careers = prog.progCareer.split("#")%}
-        {%for career in careers%}
-        <li>{{career}}</li>
-        {% endfor %}
-      </ul>
+          {%set careers = prog.progCareer.split("#")%}
+          {%for career in careers%}
+          <li>{{career}}</li>
+          {% endfor %}
+        </ul>
       </div>
       <div id="req" class="tab-pane fade">
         <h4>Entry Requirement</h4>
         <img src="../static/assets/img/{{prog.progReq}}" class="img-fluid">
       </div>
 
-      <button class="btn m-auto d-flex my-2"><a href="{{ url_for('compareProg',id1=prog.progId, id2='')}}"
-          class="text-white">Compare with other Programme</a></button>
+      <a href="{{ url_for('compareProg',id1=prog.progId, id2='')}}" class="text-white"><button
+          class="btn m-auto d-flex my-2">Compare with other Programme</button></a>
 
-      <button class="btn d-flex m-auto my-2"><a href="{{ url_for('enrollment')}}"
-          class="text-white">Enroll Now!</a></button>
+      <a href="{{ url_for('enrollment')}}" class="text-white"><button class="btn d-flex m-auto my-2">Enroll
+          Now!</button></a>
     </div>
   </div>
 </div>
