--- a/templates/compareProg.html
+++ b/templates/compareProg.html
@@ -6,19 +6,20 @@
     margin: 0%;
     padding: 0%;
   }
+
   p {
     text-align: justify;
-  text-justify: inter-word;
+    text-justify: inter-word;
   }
 
-  .btn{
+  .btn {
     background-color: #eba200;
     border-radius: 0%;
   }
 
   .btn:hover {
     background-color: #c98900;
-    }
+  }
 </style>
 
 <div
@@ -35,32 +36,13 @@
     </div>
   </div>
 
-  <div class="row mt-5">
-    <div class="">
-      <ul class="nav justify-content-center nav-tabs nav-justified navbar-dark">
-        <li class="nav-item "><a class="nav-link active text-dark" data-bs-toggle="tab" href="#overview">
-          <strong>Programme Overview</strong>
-          </a></li>
-        <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#req">
-          <strong>Mininum Entry Requirement</strong>
-          </a></li>
-        <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#outline">
-          <strong>Programme Outline</strong>
-          </a></li>
-        <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#career">
-          <strong>Career Prospect</strong>
-          </a></li>
-      </ul>
-    </div>
-  </div>
-
   <div class="container">
     <div class="row">
       <div class="col">
 
         <div class="dropdown d-grid my-2">
           <button type="button" class="btn dropdown-toggle " data-bs-toggle="dropdown">
-            Select Programme
+            {{prog.progName}}
           </button>
           <ul class="dropdown-menu">
 
@@ -78,7 +60,7 @@
 
         <div class="dropdown d-grid my-2">
           <button type="button" class="btn dropdown-toggle " data-bs-toggle="dropdown">
-            Select Programme
+            {{compareProg.progName}}
           </button>
           <ul class="dropdown-menu">
 
@@ -94,6 +76,29 @@
 
 
     </div>
+  </div>
+
+  <div class="row mt-5">
+    <div class="">
+      <ul class="nav justify-content-center nav-tabs nav-justified navbar-dark">
+        <li class="nav-item "><a class="nav-link active text-dark" data-bs-toggle="tab" href="#overview">
+            <strong>Programme Overview</strong>
+          </a></li>
+        <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#req">
+            <strong>Mininum Entry Requirement</strong>
+          </a></li>
+        <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#outline">
+            <strong>Programme Outline</strong>
+          </a></li>
+        <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#career">
+            <strong>Career Prospect</strong>
+          </a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="container">
+
     <div class="container-fluid">
       <div class="tab-content">
 
@@ -116,11 +121,11 @@
 
               <h4>Duration</h4>
               <ul>
-              {%set durations = prog.progDuration.split("#")%}
-              {%for duration in durations%}
-              <li>{{duration}}</li>
-              {% endfor %}
-            </ul>
+                {%set durations = prog.progDuration.split("#")%}
+                {%for duration in durations%}
+                <li>{{duration}}</li>
+                {% endfor %}
+              </ul>
               <h4>Campus</h4>
               <ul>
                 {%set campuses = prog.progCampus.split("#")%}
@@ -139,31 +144,31 @@
 
               <h4>Intake</h4>
               <ul>
-              {% if compareProg is not none and compareProg.progIntake is not none %}
-              {%set intakes1 = compareProg.progIntake.split("#")%}
-              {%for intake1 in intakes1%}
-              <li>{{intake1}}</li>
-              {% endfor %}
-              {% endif %}
-            </ul>
+                {% if compareProg is not none and compareProg.progIntake is not none %}
+                {%set intakes1 = compareProg.progIntake.split("#")%}
+                {%for intake1 in intakes1%}
+                <li>{{intake1}}</li>
+                {% endfor %}
+                {% endif %}
+              </ul>
               <h4>Duration</h4>
               <ul>
-              {% if compareProg is not none and compareProg.progDuration is not none%}
-              {%set durations1 = compareProg.progDuration.split("#")%}
-              {%for duration1 in durations1%}
-              <li>{{duration1}}</li>
-              {% endfor %}
-              {% endif %}
-            </ul>
+                {% if compareProg is not none and compareProg.progDuration is not none%}
+                {%set durations1 = compareProg.progDuration.split("#")%}
+                {%for duration1 in durations1%}
+                <li>{{duration1}}</li>
+                {% endfor %}
+                {% endif %}
+              </ul>
               <h4>Campus</h4>
               <ul>
-              {% if compareProg is not none and compareProg.progCampus is not none %}
-              {%set campuses1 = compareProg.progCampus.split("#")%}
-              {%for campus1 in campuses1%}
-              <li>{{campus1}}</li>
-              {% endfor %}
-              {% endif %}
-            </ul>
+                {% if compareProg is not none and compareProg.progCampus is not none %}
+                {%set campuses1 = compareProg.progCampus.split("#")%}
+                {%for campus1 in campuses1%}
+                <li>{{campus1}}</li>
+                {% endfor %}
+                {% endif %}
+              </ul>
             </div>
           </div>
         </div>
@@ -173,22 +178,22 @@
             <div class="col">
               <h4>Programme Outline:</h4>
               <ul>
-              {%set outlines = prog.progOutline.split("#")%}
-              {%for outline in outlines%}
-              <li>{{outline}}</li>
-              {% endfor %}
-            </ul>
+                {%set outlines = prog.progOutline.split("#")%}
+                {%for outline in outlines%}
+                <li>{{outline}}</li>
+                {% endfor %}
+              </ul>
             </div>
             <div class="col">
               <h4>Programme Outline:</h4>
               <ul>
-              {% if compareProg is not none and compareProg.progOutline is not none %}
-              {% set outlines1 = compareProg.progOutline.split("#") %}
-              {% for outline1 in outlines1 %}
-              <li>{{ outline1 }}</li>
-              {% endfor %}
-              {% endif %}
-            </ul>
+                {% if compareProg is not none and compareProg.progOutline is not none %}
+                {% set outlines1 = compareProg.progOutline.split("#") %}
+                {% for outline1 in outlines1 %}
+                <li>{{ outline1 }}</li>
+                {% endfor %}
+                {% endif %}
+              </ul>
             </div>
           </div>
         </div>
@@ -197,22 +202,22 @@
             <div class="col">
               <h4>Career Prospects</h4>
               <ul>
-              {%set careers = prog.progCareer.split("#")%}
-              {%for career in careers%}
-              <li>{{career}}</li>
-              {% endfor %}
-            </ul>
+                {%set careers = prog.progCareer.split("#")%}
+                {%for career in careers%}
+                <li>{{career}}</li>
+                {% endfor %}
+              </ul>
             </div>
             <div class="col">
               <h4>Career Prospects</h4>
               <ul>
-              {% if compareProg is not none and compareProg.progCareer is not none %}
-              {%set careers1 = compareProg.progCareer.split("#")%}
-              {%for career1 in careers1%}
-              <li>{{career1}}</li>
-              {% endfor %}
-              {% endif %}
-            </ul>
+                {% if compareProg is not none and compareProg.progCareer is not none %}
+                {%set careers1 = compareProg.progCareer.split("#")%}
+                {%for career1 in careers1%}
+                <li>{{career1}}</li>
+                {% endfor %}
+                {% endif %}
+              </ul>
             </div>
           </div>
         </div>
