--- a/templates/admin-enquiry.html
+++ b/templates/admin-enquiry.html
@@ -84,7 +84,7 @@
         <div class="bg-light border rounded-3 p-1 h-100 sticky-top">
           <ul class="nav nav-pills flex-sm-column flex-row mb-auto justify-content-between text-truncate">
             <li>
-              <a href="{{url_for('admin')}}" class="nav-link px-2 text-truncate">
+              <a href="{{ url_for('admin', page_num = 1)}}" class="nav-link px-2 text-truncate">
                 <i class="bi bi-house fs-5"></i>
                 <span class="d-none d-sm-inline">IP Tracker</span>
               </a>
