--- a/templates/admin.html
+++ b/templates/admin.html
@@ -119,7 +119,7 @@
                 </a>
               </li>
               <li>
-                <a href="{{url_for('adminEnquiry')}}" class="nav-link px-2 text-truncate">
+                <a href="{{ url_for('adminEnquiry', page_num = 1)}}" class="nav-link px-2 text-truncate">
                   <i class="bi bi-speedometer fs-5"></i>
                   <span class="d-none d-sm-inline">Enquiries</span>
                 </a>
