--- a/templates/enrollment.html
+++ b/templates/enrollment.html
@@ -30,6 +30,16 @@ Enrollment
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    background-color: #eba200;
+    border: #eba200;
+}
+
+.btn.btn-primary:disabled{
+    background-color: #eba200;
+    border: #eba200;
+}
 </style>
 
 <main>
