--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -22,14 +22,14 @@ About Us
       </div>
       <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
-          <div class="col-md-4">
-            <img src="../static/assets/img/why-us.png" class="img-fluid rounded-start" alt="...">
+          <div class="col-md-3">
+            <img src="../static/assets/img/reseach13.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              <h3 class="card-title"><b>Dean</b></h3>
+              <p class="card-text">Ts. Lim Shen Huoy<br/>
+                DipIT (PTPL), BSc (Hons) (Staffs), ExecDipMgt, MCompSc (Mal), P.Tech.</p>
             </div>
           </div>
         </div>
