--- a/templates/compareProg.html
+++ b/templates/compareProg.html
@@ -30,18 +30,17 @@
 <div class="container my-5">
   <div class="row">
     <div class="col">
-      <div class="mb-5 text-center">
-        <h1>Programmes</h1>
+      <div class="mb-4 text-center">
+        <h3>Programmes</h3>
       </div>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col">
-
+      <div class="col-6">
         <div class="dropdown d-grid my-2">
-          <button type="button" class="btn dropdown-toggle " data-bs-toggle="dropdown">
+          <button type="button" class="btn dropdown-toggle fs-6 text-wrap " data-bs-toggle="dropdown">
             {{prog.progName}}
           </button>
           <ul class="dropdown-menu">
@@ -53,13 +52,10 @@
 
           </ul>
         </div>
-
       </div>
-
-      <div class="col">
-
+      <div class="col-6">
         <div class="dropdown d-grid my-2">
-          <button type="button" class="btn dropdown-toggle " data-bs-toggle="dropdown">
+          <button type="button" class="btn dropdown-toggle fs-6 text-wrap " data-bs-toggle="dropdown">
             {{compareProg.progName}}
           </button>
           <ul class="dropdown-menu">
@@ -71,14 +67,11 @@
 
           </ul>
         </div>
-
       </div>
-
-
     </div>
   </div>
 
-  <div class="row mt-5">
+  <div class="row mt-3">
     <div class="">
       <ul class="nav justify-content-center nav-tabs nav-justified navbar-dark">
         <li class="nav-item "><a class="nav-link active text-dark" data-bs-toggle="tab" href="#overview">
@@ -98,13 +91,11 @@
   </div>
 
   <div class="container">
-
     <div class="container-fluid">
       <div class="tab-content">
-
         <div id="overview" class="tab-pane fade show active">
           <div class="row">
-            <div class="col">
+            <div class="col-6 p-3">
               <h4>Programme Name</h4>
               <p>{{prog.progName}}</p>
 
@@ -135,7 +126,7 @@
               </ul>
 
             </div>
-            <div class="col">
+            <div class="col-6 p-3">
               <h4>Programme Name</h4>
               <p>{{compareProg.progName}}</p>
 
@@ -175,7 +166,7 @@
 
         <div id="outline" class="tab-pane fade">
           <div class="row">
-            <div class="col">
+            <div class="col-6 p-3">
               <h4>Programme Outline:</h4>
               <ul>
                 {%set outlines = prog.progOutline.split("#")%}
@@ -184,7 +175,7 @@
                 {% endfor %}
               </ul>
             </div>
-            <div class="col">
+            <div class="col-6 p-3">
               <h4>Programme Outline:</h4>
               <ul>
                 {% if compareProg is not none and compareProg.progOutline is not none %}
@@ -199,7 +190,7 @@
         </div>
         <div id="career" class="tab-pane fade">
           <div class="row">
-            <div class="col">
+            <div class="col-6 p-3">
               <h4>Career Prospects</h4>
               <ul>
                 {%set careers = prog.progCareer.split("#")%}
@@ -208,7 +199,7 @@
                 {% endfor %}
               </ul>
             </div>
-            <div class="col">
+            <div class="col-6 p-3">
               <h4>Career Prospects</h4>
               <ul>
                 {% if compareProg is not none and compareProg.progCareer is not none %}
@@ -223,11 +214,11 @@
         </div>
         <div id="req" class="tab-pane fade">
           <div class="row">
-            <div class="col">
+            <div class="col-6 p-3">
               <h4>Entry Requirement</h4>
               <img src="../static/assets/img/{{prog.progReq}}" class="img-fluid">
             </div>
-            <div class="col">
+            <div class="col-6 p-3">
               <h4>Entry Requirement</h4>
               <img src="../static/assets/img/{{compareProg.progReq}}" class="img-fluid">
             </div>
