--- a/templates/highlights.html
+++ b/templates/highlights.html
@@ -54,7 +54,7 @@ Highlights
           {% for award in awards.items %}
           <tr>
             <td style="width:10%"><img src="../static/assets/img/{{ award.awardPhoto }}" alt="Awards (Header)"
-                style="width: 100px; height: 70px; object-fit: contain" </td>
+                style="width: 100px; height: 70px; object-fit: contain"> </td>
             <td style="font-weight: bold; width:75%">{{ award.awardTitle }}</td>
             <td style="font-style: italic; width:15%; text-align: center">{{ award.awardDate }}</td>
           </tr>
@@ -92,7 +92,7 @@ Highlights
           <input type="radio" value=2022 name="awardYear">Year 2022</br>
           <input type="radio" value=2021 name="awardYear">Year 2021</br>
           <input type="radio" value=2020 name="awardYear">Year 2020</br>
-          <input type="submit" value="Filter">
+          <input type="submit" value="Filter" style="background-color: #eba200;">
         </form>
       </div>
 
@@ -103,7 +103,7 @@ Highlights
           <u>Archive Categories</u>
         </p>
         <button type="button" class="btn btn-primary btn-sm"
-          style="float: left; margin-left: 30px; width: 200px; height: fit-content">
+          style="float: left; margin-left: 30px; width: 200px; height: fit-content;background-color: #eba200;">
           <div>
             <a href="{{ url_for('events', page_num = 1) }}" class="list-group-item list-group-item-action">
               <div>
@@ -113,7 +113,7 @@ Highlights
                     d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z" />
                 </svg>
                 <h
-                  style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
+                  style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                   Events</h>
               </div>
             </a>
