Change recognition header & event button & images

--- a/templates/highlights.html
+++ b/templates/highlights.html
@@ -54,7 +54,7 @@ Highlights
           {% for award in awards.items %}
           <tr>
             <td style="width:10%"><img src="../static/assets/img/{{ award.awardPhoto }}" alt="Awards (Header)"
-                style="width: 100px; height: 70px; object-fit: contain"> </td>
+                style="width: 100px; height: 70px; object-fit: cover"> </td>
             <td style="font-weight: bold; width:75%">{{ award.awardTitle }}</td>
             <td style="font-style: italic; width:15%; text-align: center">{{ award.awardDate }}</td>
           </tr>
