--- a/templates/events.html
+++ b/templates/events.html
@@ -52,9 +52,9 @@ Highlights
           {% for event in events.items %}
           <tr>
             <td style="width:10%"><img src="../static/assets/img/{{ event.eventPhoto }}" alt="Events (Header)"
-                style="width: 100px; height: 70px; object-fit: contain" </td>
-            <td style="font-weight: bold; width:65%">{{ event.eventTitle }}</td>
-            <td style="font-style: italic; width:20%; text-align: center">{{ event.eventDate }}</td>
+                style="width: 100px; height: 70px; object-fit: cover;" </td>
+            <td style="font-weight: bold; width:75%">{{ event.eventTitle }}</td>
+            <td style="font-style: italic; width:15%; text-align: center">{{ event.eventDate }}</td>
           </tr>
           {% endfor %}
         </tbody>
@@ -89,7 +89,7 @@ Highlights
           <input type="radio" value=2023 name="eventYear">Year 2023</br>
           <input type="radio" value=2022 name="eventYear">Year 2022</br>
           <input type="radio" value=2021 name="eventYear">Year 2021</br>
-          <input type="submit" value="Filter">
+          <input type="submit" value="Filter" style="background-color: #eba200">
         </form>
       </div>
 
@@ -100,7 +100,7 @@ Highlights
           <u>Archive Categories</u>
         </p>
         <button type="button" class="btn btn-primary btn-sm"
-          style="float: left; margin-left: 30px; width: 200px; height: fit-content">
+          style="float: left; margin-left: 30px; width: 200px; height: fit-content; background-color: #eba200">
           <div>
             <a href="{{ url_for('highlights', page_num = 1) }}" class="list-group-item list-group-item-action">
               <div>
