--- a/templates/recognition.html
+++ b/templates/recognition.html
@@ -1,5 +1,5 @@
 {% extends "base.html"%}
-{% block title %} Testimonials {% endblock %}
+{% block title %} Recognition {% endblock %}
 {%block content %}
 <style>
     /* Example 2: Background image with specific position and size */
@@ -35,7 +35,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="custom-position-size " >
-                <div class="container m-5 text-light"><h1>Testimonials</h1></div>
+                <div class="container m-5 text-light"><h1>Recognition</h1></div>
             </div>
         </div>
     </div>
