--- a/templates/compareProg.html
+++ b/templates/compareProg.html
@@ -31,7 +31,7 @@
   <div class="row">
     <div class="col">
       <div class="mb-4 text-center">
-        <h3>Programmes</h3>
+        <h3>Programmes Comparison</h3>
       </div>
     </div>
   </div>
