--- a/templates/compareProg.html
+++ b/templates/compareProg.html
@@ -1,5 +1,5 @@
 {% extends "base.html"%}
-{% block title %} programme {% endblock %}
+{% block title %} Programme {% endblock %}
 {%block content %}
 <style>
   .col img {
