--- a/templates/admin.html
+++ b/templates/admin.html
@@ -161,7 +161,7 @@
                 {% if page %}
                   <li class="page-item {%if page == userIP.page %} active {% endif %}"><a href="{{ url_for('admin', page_num=page) }}" class="page-link">{{ page }}</a></li>
                 {% else %}  
-                  ...
+                  &nbsp;...&nbsp;
                 {% endif %}
               
               {% endfor %}
