--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -32,30 +32,21 @@ Testimonials
         <div class="col-9 text-center">
           <h2 class="m-2">FOCS Alumni</h2>
           <div class="row row-cols-1 row-cols-md-3 g-4 m-4 justify-content-center">
+            {%for aca in acaList%}
             <div class="card-hover">
               <div class="card h-100">
-                <a href="#" class="card-link">
-                  <img src="../static/assets/img/why-us.png" class="card-img-top" alt="">
+                <a href="{{ url_for('testimonial1',id=aca.acaId)}}" class="card-link">
+                  <img src="../static/assets/img/{{aca.acaPic}}" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
-                  <h4 class="card-title fs-6">Card title</h4>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card-hover">
-              <div class="card h-100">
-                <a href="#" class="card-link">
-                  <img src="../static/assets/img/why-us.png" class="card-img-top" alt="">
-                </a>
-                <div class="card-body">
-                  <h4 class="card-title fs-6">Card title</h4>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h4 class="card-title fs-6">{{aca.acaName}}</h4>
+                  <p class="card-text">{{aca.acaPosition}}</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        {% endfor %}
         <div class="col-3">
           <h4 class="m-2 fs-6">More</h4>
           <ul class="list-group list-group-flush">
