--- a/templates/events.html
+++ b/templates/events.html
@@ -44,8 +44,7 @@ Highlights
     style="background-image: url('../static/assets/img/eventsHeader.jpg'); background-position: top 80%; background-size: cover; width: 100%; height: 150px;">
     <h1 class="position-absolute ml-2" style="margin-top: 50px; color:white; margin-left: 120px;">Events</h1>
   </div>
-
-  <div class="flex-container">
+  <div class="flex-container mt-5">
     <div class="flex-item-left">
       <table class="table table-bordered">
         <tbody>
