--- a/templates/highlights.html
+++ b/templates/highlights.html
@@ -47,7 +47,7 @@ Highlights
 
 
   <!-- Display Award Details -->
-  <div class="flex-container">
+  <div class="flex-container mt-5">
     <div class="flex-item-left">
       <table class="table table-bordered">
         <tbody>
