--- a/templates/academician1.html
+++ b/templates/academician1.html
@@ -1,19 +1,33 @@
 {% extends "base.html" %}
 {% block title %}
-Testimonials
+Academicians
 {% endblock %}
 
 {%block content %}
+
+<style>
+    .col img {
+        margin: 0%;
+        padding: 0%;
+    }
+
+    p {
+        text-align: justify;
+        text-justify: inter-word;
+    }
+</style>
 <div class="container mt-5">
     <div class="row">
-        <div class="col">
+        <div class="col text-center md-5">
             <h2>{{aca.acaName}}</h2>
         </div>
     </div>
 
     <div class="row">
-        <div class="col">
-            <img src="../static/assets/img/{{aca.acaPic}}">
+        <div class="col text-center">
+
+            <img src="../static/assets/img/{{aca.acaPic}}" class="rounded mx-auto d-block border border-5">
+
         </div>
         <div class="col">
             <h4>Position</h4>
@@ -29,8 +43,8 @@ Testimonials
             <p>{{aca.acaMajor}}</p>
             <h4>Area of Interest</h4>
             <ul>
-            {%set aois = aca.acaAoi.split("#")%}
-            {%for aoi in aois%}
+                {%set aois = aca.acaAoi.split("#")%}
+                {%for aoi in aois%}
                 <li>{{aoi}}</li>
                 {% endfor %}
             </ul>
