--- a/templates/academician1.html
+++ b/templates/academician1.html
@@ -18,7 +18,7 @@ Academicians
 </style>
 <div class="container mt-5">
     <div class="row">
-        <div class="col text-center md-5">
+        <div class="col text-center md-5 mb-5 text-decoration-underline ">
             <h2>{{aca.acaName}}</h2>
         </div>
     </div>
